<resources>
	<string name="app_name">Easy Trip</string>
	<string name="action_settings">Настройки (?)</string>

	<string name="main_greeting">Добро пожаловать в Easy Trip!\n
	Выберите одну из опций, чтобы продолжить…</string>
	<string name="main_generate_travel">Создать путешествие!</string>
	<string name="main_lookup">Просмотреть существующие путешествия</string>
	<string name="main_followMe">Отправиться в путешествие!</string>

	<string name="title_activity_create_travel_menu">Создайте новое путешествие</string>

	<string name="cs_return">Button</string>
	<string name="cs_commit">Подтвердить выбор!</string>
	<string name="cs_add_city_top">Добавить город(а)…</string>
	<string name="cs_add_city_bot">Коснитесь элемента списка</string>

	<string name="commit_city_pick">Подтвердить выбор</string>

	<string name="cslctr_cntxt_show_map">Показать на карте</string>
	<string name="cslctr_cntxt_request_info">Запросить информацию</string>
	<string name="cslctr_cntxt_edit_notes">Показать заметки</string>
	<string name="cslctr_cntxt_remove_city">Удалить город из списка</string>
	<string name="cslctr_cntxt_coords_template" formatted="false">с координатами %3.3f, %3.3f</string>
	<string name="cslctr_hints">Выберите желаемые для посещения города и нажмите на кнопку подтверждения:</string>
	<string name="cslctr_empty_list">Не выбрано ни одного города :(</string>
	<!-- unused -->
	<string name="slctr_close_without_confirmation">Вы уверены, что хотите вернуться? Все несохранённые изменения будут утеряны!</string>

	<string name="wmap_search_stub">Найти на карте…</string>
	<string name="wmap_unresolved_country">Неизвестная страна</string>
	<string name="wmap_unresolved_city">Неизвестный город</string>
	<string name="wmap_remove_known_prompt_title" formatted="false">Удалить город %s из списка?</string>
	<string name="wmap_remove_unknown_prompt_title">Удалить город из списка?</string>
	<string name="wmap_hints">Для удаления города с карты нажмите и удерживайте всплывающую подсказку над ним.</string>

	<string name="city_notes_hint">Заметок пока нет.</string>
	<string name="city_edit_notes_prompt">Редактировать заметки</string>
	<string name="city_close_notes_dialog">Закрыть диалог</string>
	<string name="city_edit_notes_commit">Сохранить изменения</string>
	<string name="city_edit_notes_decline">Выйти без изменений</string>
	<string name="city_unsaved_alert">Несохранённые изменения будут потеряны!</string>

	<string name="crttrvl_hints">Теперь оптимизируйте порядок посещения городов и сохраните результат :3</string>
	<string name="crttrvl_optimize_title">Оптимизировать порядок посещения</string>
	<string name="crttrvl_commit_title">Сохранить путешествие!</string>
	<string name="crttrvl_show_route">Нанести маршрут на карту</string>
	<string name="crttrvl_save_travel">Сохранить путешествие!</string>
	<string name="crttrvl_prompt_negative">Отмена</string>
	<string name="crttrvl_name_your_travel_prompt">Дайте имя своему путешествию</string>
	<string name="crttrvl_length_unoptimized" formatted="false">"Текущая длина маршрута составляет\n%.2f километров.\nОптимизируйте его!"</string>
	<string name="crttrvl_length_optimized" formatted="false">"Текущая длина маршрута составляет\n%.2f километров.\nВы сэкономили %d км!"</string>
	<string name="crttrvl_unopt_route_drawn">Отображён исходный маршрут.\nВы можете его оптимизировать!</string>
	<string name="crttrvl_opt_route_drawn">Отображён оптимальный маршрут!</string>

	<string name="tslctr_hints">Выберите одно из своих путешествий…</string>
	<string name="tslctr_empty_list_stub">Похоже, вы ещё на создали ни одного путешествия.\nНажмите сюда, чтобы попробовать!</string>
	<string name="tslctr_back">Вернуться в главное меню</string>
	<string name="tslctr_context_title">Что вы хотите сделать?</string>
	<string name="tslctr_query_travel">Просмотреть города</string>
	<string name="tslctr_redraw_route">Отобразить маршрут</string>
	<string name="tslctr_remove_travel">Удалить путешествие</string>

	<!-- seems to be common -->
	<string name="prompt_positive">Да</string>
	<string name="prompt_negative">Нет</string>
	<string name="placeholder_city_unknown">Неизвестный город</string>
	<string name="placeholder_country_unknown">Неизвестная страна</string>

	<string name="travel_underline" formatted="false">%d городов, %.2f км</string>

	<string name="main_create_travel_success">Поздравляем, Вы успешно создали путешествие!</string>
</resources>
