<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<TextView
			android:text="@string/crttrvl_hints"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_gravity="center"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:typeface="normal"
			android:textStyle="bold"
			android:textSize="15sp"
			android:textAlignment="center"
			android:textColor="@color/wallet_dim_foreground_inverse_holo_dark"

			android:layout_weight="0.02"

			android:id="@+id/textView"/>

	<ListView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="10dp"
			android:id="@+id/lvCitiesSelected"
			android:layout_weight="0.95">
	</ListView>

	<TextView
			android:text=""
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_gravity="center"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:textSize="15sp"
			android:id="@+id/tvTravelStatus"
			android:layout_weight="0.02"/>

	<Button
			android:text="@string/crttrvl_show_route"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_gravity="center"
			android:id="@+id/bDrawRoute"
			android:onClick="drawCurrentRoute"
			android:layout_weight="0.03"/>

	<Button
			android:text="@string/crttrvl_optimize_title"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_gravity="center"
			android:id="@+id/bOptimize"
			android:onClick="optimize"
			android:layout_weight="0.03"/>

	<Button
			android:text="@string/crttrvl_commit_title"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="15dp"
			android:layout_marginLeft="15dp"
			android:layout_marginRight="15dp"
			android:layout_gravity="center"
			android:id="@+id/bCommit"
			android:onClick="commit"
			android:layout_weight="0.03"/>
</LinearLayout>
